--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         height: 1500px; /* Used in this example to enable scrolling */
       }
     </style>
-    <title>DENNIS LEE's website</title>
+    <title>DENNIS LEE's Website</title>
   </head>
   <body>
     <canvas id="bg"></canvas>
